# dev

./: CMakeLists.txt
src/Test/: CMakeLists.txt  test.cpp
src/YouMeCommon/: AccessValidate.cpp  CMakeLists.txt  CryptUtil.cpp  CryptUtil.h  DNSUtil.cpp  DownloadUploadManager.cpp  DownloadUploadManager.h  KeywordFilter.cpp  Log.cpp  MessageHandle.cpp  NetworkTest.cpp  SDKValidate.cpp  SHA1.cpp  SoundTouchConfig.cpp  SqliteOperator.cpp  StringUtil.cpp  SyncTCP.cpp  SyncUDP.cpp  TimeUtil.cpp  TranslateUtil.cpp  XAny.cpp  XCondWait.cpp  XDNSParse.cpp  XFile.cpp  XNetworkUtil.cpp  XPowerUnion.cpp  XSemaphore.cpp  XTimer.cpp  XVariant.cpp  YouMeCommonVersion.cpp  YouMeDataChannel.cpp  amrFileCodec.cpp  get_sys_info.cpp  opusFileCodec.cpp  profiledb.cpp
src/YouMeCommon/CrossPlatformDefine/: PlatformDef.cpp
src/YouMeCommon/CrossPlatformDefine/IOS/: Reachability.m  ReachabilityService.mm  ReachabilityServiceBridge.mm  YouMeApplication_iOS.mm
src/YouMeCommon/CrossPlatformDefine/OSX/: Reachability.m  ReachabilityService.mm  YouMeApplication_OSX.mm
src/YouMeCommon/CrossPlatformDefine/Windows/: YouMeApplication_Win.cpp  YouMeRegistry.cpp  YouMeSystemInfo.cpp
src/YouMeCommon/axTLS/: aes.cpp  asn1.cpp  bigint.cpp  crypto_misc.cpp  hmac_2.cpp  loader.cpp  md5_2.cpp  os_port.cpp  p12.cpp  rc4.cpp  rsa.cpp  sha1.cpp  sha256.cpp  sha384.cpp  sha512.cpp  tls1.cpp  tls1_clnt.cpp  tls1_svr.cpp  tls_openssl.cpp  x509.cpp
src/YouMeCommon/crypto/rsa/: rsa_depr.cpp  rsa_gen.cpp
src/YouMeCommon/cryptopp/: cpu-features.cpp
src/YouMeCommon/curl/: amigaos.cpp  asyn-thread.cpp  base64.cpp  bundles.cpp  conncache.cpp  connect.cpp  cookie.cpp  curl_addrinfo.cpp  curl_des.cpp  curl_endian.cpp  curl_fnmatch.cpp  curl_gethostname.cpp  curl_memrchr.cpp  curl_multibyte.cpp  curl_ntlm.cpp  curl_ntlm_core.cpp  curl_ntlm_msgs.cpp  curl_sasl.cpp  curl_threads.cpp  dotdot.cpp  easy.cpp  escape.cpp  fileinfo.cpp  formdata.cpp  getenv.cpp  getinfo.cpp  hash.cpp  hmac.cpp  hostasyn.cpp  hostcheck.cpp  hostip.cpp  hostip4.cpp  hostip6.cpp  hostsyn.cpp  http.cpp  http_chunks.cpp  http_digest.cpp  http_proxy.cpp  if2ip.cpp  inet_ntop.cpp  (+29 more)
src/YouMeCommon/curl/vtls/: axtls.cpp
src/YouMeCommon/jitterbuffer/: JitterbufferBase.cpp  JitterbufferCommon.cpp
src/YouMeCommon/json/: json_reader.cpp
src/YouMeCommon/lua-5.3.2/: LuaDownloadUploadManager.cpp  Luna.cpp
src/YouMeCommon/lua-5.3.2/src/: lapi.cpp  lauxlib.cpp  lbaselib.cpp  lbitlib.cpp  lcode.cpp  lcorolib.cpp  lctype.cpp  ldblib.cpp  ldebug.cpp  ldo.cpp  ldump.cpp  lfunc.cpp  lgc.cpp  linit.cpp  liolib.cpp  llex.cpp  lmathlib.cpp  lmem.cpp  loadlib.cpp  lobject.cpp  lopcodes.cpp  loslib.cpp  lparser.cpp  lstate.cpp  lstring.cpp  lstrlib.cpp  ltable.cpp  ltablib.cpp  ltm.cpp  lundump.cpp  lutf8lib.cpp  lvm.cpp  lzio.cpp
src/YouMeCommon/minizip/: MiniZip.cpp
src/YouMeCommon/network/: autobuffer.cc  local_ipstack.cc  nat64_prefix_util.cc  socket_address.cc  strutil.cc  tcpclient.cc  unix_socket.cc
src/YouMeCommon/network/android/: ifaddrs.c
src/YouMeCommon/network/unix/: getdnssvraddrs.cc  getgateway.c  getifaddrs.cc  socketbreaker.cc  socketpoll.cc  socketselect.cc
src/YouMeCommon/network/windows/: socketselect2.cc
src/YouMeCommon/opencc/: Config.cpp
src/YouMeCommon/opus-1.1/celt/: bands.cpp  celt.cpp  celt_decoder.cpp  celt_encoder.cpp  celt_lpc.cpp  cwrs.cpp  entcode.cpp  entdec.cpp  entenc.cpp  kiss_fft.cpp  laplace.cpp  mathops.cpp  mdct.cpp  modes.cpp  pitch.cpp  quant_bands.cpp  rate.cpp  vq.cpp
src/YouMeCommon/opus-1.1/celt/arm/: arm_celt_map.cpp  armcpu.cpp  (+1 more)
src/YouMeCommon/opus-1.1/silk/: A2NLSF.cpp  CNG.cpp  HP_variable_cutoff.cpp  LPC_analysis_filter.cpp  LPC_inv_pred_gain.cpp  LP_variable_cutoff.cpp  NLSF2A.cpp  NLSF_VQ.cpp  NLSF_VQ_weights_laroia.cpp  NLSF_decode.cpp  NLSF_del_dec_quant.cpp  NLSF_encode.cpp  NLSF_stabilize.cpp  NLSF_unpack.cpp  NSQ.cpp  NSQ_del_dec.cpp  PLC.cpp  VAD.cpp  VQ_WMat_EC.cpp  ana_filt_bank_1.cpp  biquad_alt.cpp  bwexpander.cpp  bwexpander_32.cpp  check_control_input.cpp  code_signs.cpp  control_SNR.cpp  control_audio_bandwidth.cpp  control_codec.cpp  debug.cpp  dec_API.cpp  decode_core.cpp  decode_frame.cpp  decode_indices.cpp  decode_parameters.cpp  decode_pitch.cpp  decode_pulses.cpp  decoder_set_fs.cpp  enc_API.cpp  encode_indices.cpp  encode_pulses.cpp  (+36 more)
src/YouMeCommon/opus-1.1/src/: analysis.cpp  mlp.cpp  mlp_data.cpp  opus.cpp  opus_compare.cpp  opus_decoder.cpp  opus_demo.cpp  opus_encoder.cpp  opus_multistream.cpp  opus_multistream_decoder.cpp  opus_multistream_encoder.cpp  repacketizer.cpp
src/YouMeCommon/pb/: fec.pb.cc  fec.proto  youme_comm.pb.cc  youme_comm.proto  youme_comm_conf.pb.cc  youme_comm_conf.proto
src/YouMeCommon/rnnoise/: celt_lpc.c  denoise.c  kiss_fft.c  models.c  pitch.c  rnn.c  rnn_reader.c
src/YouMeCommon/rnnoise/models/: cb.c
src/YouMeCommon/rscode-1.3/: FecWrapper.cpp  Rscode.cpp  Rscode2.cpp  RscodeWrapper.cpp  RscodeWrapper2.cpp  fec.c  rs.c
src/YouMeCommon/soundTouch/: AAFilter.cpp  BPMDetect.cpp  FIFOSampleBuffer.cpp  FIRFilter.cpp  InterpolateCubic.cpp  InterpolateLinear.cpp  InterpolateShannon.cpp  PeakFinder.cpp  RateTransposer.cpp  SoundTouch.cpp  TDStretch.cpp  WavFile.cpp  cpu_detect_x86.cpp  mmx_optimized.cpp  sse_optimized.cpp
src/YouMeCommon/tinyxml/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
src/YouMeCommon/wavresample/: PCMResampleTo8K.cpp  tdav_codec_audio_resample.cpp
src/YouMeCommon/yuvlib/: compare.cc  compare_common.cc  compare_gcc.cc  compare_msa.cc  compare_neon.cc  compare_neon64.cc  compare_win.cc  convert.cc  convert_argb.cc  convert_from.cc  convert_from_argb.cc  convert_jpeg.cc  convert_to_argb.cc  convert_to_i420.cc  cpu_id.cc  mjpeg_decoder.cc  mjpeg_validate.cc  planar_functions.cc  rotate.cc  rotate_any.cc  rotate_argb.cc  rotate_common.cc  rotate_dspr2.cc  rotate_gcc.cc  rotate_msa.cc  rotate_neon.cc  rotate_neon64.cc  rotate_win.cc  row_any.cc  row_common.cc  row_dspr2.cc  row_gcc.cc  row_msa.cc  row_neon.cc  row_neon64.cc  row_win.cc  scale.cc  scale_any.cc  scale_argb.cc  scale_common.cc  (+7 more)
(+64 files in other folders)
